<resources>
    <string name="app_name">Etbara3</string>


    <string name="request_blood">Request Blood</string>
    <string name="About_us">About US</string>
    <string name="log_out">Log Out</string>
    <string name="Home">Home</string>
    <string name="Update_user_profile">Update Profile</string>
    <string-array name="BloodType_array">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
    </string-array>


    <string-array name="city_array">
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Mansoura</item>
        <item>Minya</item>
        <item>Giza</item>
        <item>Port Said</item>
        <item>Suez</item>
        <item>El Mahalla El Kubra</item>
        <item>Luxor</item>
        <item>Tanta</item>
        <item>Asyut</item>
        <item>Ismailia</item>
        <item>Faiyum</item>
        <item>Zagazig</item>
        <item>Damietta</item>
        <item>Aswan</item>
        <item>Damanhur</item>
        <item>Beni Suef</item>
        <item>Hurghada</item>
        <item>Qena</item>
        <item>Sohag</item>
        <item>Shibin El Kom</item>
        <item>Banha</item>
        <item>Arish</item>
        <item>Shubra El Kheima</item>
    </string-array>
    <string-array name="zipcode_array">
        <item></item>

    </string-array>


</resources>
