<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/Update_user_profile"
    android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/request_blood" android:title="@string/request_blood"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/About_us" android:title="@string/About_us"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/log_out" android:title="@string/log_out"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/Home" android:title="@string/Home"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
